k8s/05-mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: notes-app
spec:
  serviceName: "mongodb-service"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
            - name: mongodb-config
              mountPath: /docker-entrypoint-initdb.d/init.js
              subPath: init.js
            - name: mongodb-config
              mountPath: /etc/mongod.conf
              subPath: mongod.conf
          command: ["mongod", "--config", "/etc/mongod.conf"]
      volumes:
        - name: mongodb-config
          configMap:
            name: mongodb-config
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "manual"
        resources:
          requests:
            storage: 1Gi
