k8s/07-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app
  namespace: notes-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-app
  template:
    metadata:
      labels:
        app: notes-app
    spec:
      containers:
        - name: notes-app
          image: ileepetrovv1515/notes-app:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: "/app/config"
      volumes:
        - name: app-config
          configMap:
            name: notes-app-config
