k8s/04-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: notes-app
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
